--- a/styles.css
+++ b/styles.css
@@ -13,16 +13,14 @@ body {
   display: block;
   width: 50%;
   margin: auto;
-
 }
 
 .btn {
-  margin: 25px;
   display: inline-block;
-  height: 200px;
-  width: 200px;
-  border: 10px solid black;
-  border-radius: 20%;
+  height: 250px;
+  width: 250px;
+  border: 5px solid black;
+  margin: 3px;
 }
 
 .game-over {
@@ -32,18 +30,22 @@ body {
 
 .red {
   background-color: red;
+  border-radius: 0 100% 0 0;
 }
 
 .green {
   background-color: green;
+  border-radius: 100% 0 0 0;
 }
 
 .blue {
   background-color: blue;
+  border-radius: 0 0 100% 0;
 }
 
 .yellow {
   background-color: yellow;
+  border-radius: 0 0 0 100%;
 }
 
 .pressed {
